testing/macro-tests/tests/ui/insert_type_excludes_generated_field.stderr
error[E0560]: struct `UiEntity_Create` has no field named `id`
  --> tests/ui/insert_type_excludes_generated_field.rs:34:9
   |
34 |         id: Some(Ulid::generate()),
   |         ^^ `UiEntity_Create` does not have this field
   |
   = note: all struct fields are already assigned
